--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,15 @@
 .mainContainer{
   background-color: #444;
   background-image: url('https://api.timeforkids.com/wp-content/uploads/2019/09/final-cover-forest.jpg');
-  background-size: cover;
+  /* background-image: url('https://images.unsplash.com/photo-1492999104346-cabaa757be8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80'); */
+  /* background-size:  center center/cover; */
+  background-size:  center/cover;
+  
   /* height: 100vh; */
+}
+
+.responseLabel{
+  text-align: center;
 }
 
 .App{
@@ -153,6 +160,7 @@
   color: white;
   align-items: center;
 }
+
 .moodForm{
   display: flex;
   flex-direction: column;
@@ -170,6 +178,18 @@
   align-items: center;
 }
 
+.btnPressed{
+  background-color: rgba(8, 126, 141, 0.973);
+
+  margin: 6px;
+  border-radius: 12px;
+
+  color: white;
+  border-color: white;
+  height: 2rem;
+  width: 7rem;
+  font-size: 16px;
+}
 
 .formInput{
   margin: 5px;
@@ -284,6 +304,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: stretch;
+
 }
 
 .loginForm{
