--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,25 @@
 /* 4. PARENT CONTAINERS   */
 /* 5. COMPONENTS          */
 /* 6. LABELS              */
+/* 7. ERRORS              */
 
 
 
 /* 1. APP CONTAINER  */
 
 .mainContainer{
-  background-color: #444;
-  background-image: url('https://api.timeforkids.com/wp-content/uploads/2019/09/final-cover-forest.jpg');
-  /* background-image: url('https://images.unsplash.com/photo-1492999104346-cabaa757be8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80'); */
-  /* background-size:  center center/cover; */
-  background-size:  center/cover;
+  background-color: #ebebeb;
+  background-image: url('https://images.unsplash.com/photo-1487700160041-babef9c3cb55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1935&q=80');
+
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100%; 
+  width: 100%;
   
-  /* height: 100vh; */
+
+
 }
 
 .responseLabel{
@@ -26,13 +32,16 @@
 }
 
 .App{
-  margin: -2em;
-  padding: 7em 7em;
+  /* margin: 0em; */
+  margin-top: -6em;
+  padding: 7em;
+  padding-left: 2em;
+  padding-right: 2em;
   
 }
 
 .logo{
-  padding: 0em;
+  padding: -10em;
 }
 
 
@@ -55,7 +64,7 @@
 
   --spacing: 1em;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 4px;
   font-size: 1.2rem; 
 }
 
@@ -87,7 +96,21 @@
 .loginContainer{
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-end;
+  padding-right: 6em;
+  /* justify-content: space-evenly; */
+}
+
+.moodContainer{
+  display: flex;
+  justify-content: flex-end;
+}
+.moodContainerFirst{
+  display: flex;
+  flex-direction: column;
+  flex-basis: 45%;
+  margin-right: 3em;
+  /* justify-content: flex-end; */
 }
 
 
@@ -116,6 +139,7 @@
 .articleBody{
   align-items: flex-start;
 }
+
 
 .cardBottom{
   display: flex;
@@ -195,7 +219,14 @@
   margin: 5px;
   height:20px;
   width: 30rem;
-    font-size:14pt;
+  font-size:14pt;
+}
+
+.loginInput{
+  margin: 3px 0px;
+  height:22px;
+  width: 20rem;
+    font-size:12pt;
 }
 
 .prompt{
@@ -237,6 +268,7 @@
 
 .moodCard{
   display: flex;
+  
   flex-direction: column;
   flex-wrap: wrap;
   flex-shrink: 1;
@@ -311,15 +343,22 @@
 
 .loginForm{
   display: flex;
-  flex-basis: 40%;
-  border: 3px solid rgb(195, 195, 195);
+  flex-direction: column;
+  flex-basis: 35%;
+  /* border: 3px solid rgb(195, 195, 195); */
   margin-top: 70px;
-  margin-bottom: 100vh;
+  margin-bottom: 30vh;
   padding: 10px;
   border-radius: 10px;
-  background-color: white;
+  /* background-color: white; */
   justify-content: center;
 }
+
+.formBottom{
+  display: flex;
+  flex-direction: column;
+}
+
 
 
 /* 6. LABELS */
@@ -327,11 +366,29 @@
 .formLabels{
   font-weight: bold;
   font-display: center;
-  text-align: center;
-  
+}
+
+.topLabel{
+  margin-left: 27%;
+}
+.topLabelWelcome{
+  margin-left: 20%;
+}
+.topLabelPara{
+  margin-left: 20%;
+  margin-top: -10px;
+  margin-bottom: 35px;
 }
 
 .moodLabel{
   font-size: 30px;
   margin-bottom: 15px;
+}
+
+/* 7. ERRORS */
+
+.errors{
+  color: tomato;
+  font-size: 14pt;
+  margin-top: 20px;
 }
