--- a/src/Breathing.css
+++ b/src/Breathing.css
@@ -2,32 +2,42 @@
 
 
 .breathBody {
-background: no-repeat center center/cover;
-font-family: 'Montserrat', sans-serif;
-min-height: 70vh;
-overflow: hidden;
-display: flex;
-flex-direction: row;
-align-items: center;
-margin-bottom: -6em;
-color: white;
-justify-content: center;
-margin-top: -2.5em;
+    background: no-repeat center center/cover;
+    font-family: 'Montserrat', sans-serif;
+    min-height: 70vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: -6em;
+    color: white;
+    justify-content: center;
+    margin-top: -2.5em;
+    flex-basis: 30%;
+    /* border: solid black; */
+    margin-left: 40%;
+}
+
+.instructionFont{
+    color:  #010f1c;
 }
 
 .hold{
     display: flex;
     flex-direction: row;
     align-items: center;
-    color: white;
+    color:  #010f1c;
     justify-content: center;
+    margin-left: 40%;
 }
 
 .quote{
     text-align: center;
     font-weight: lighter;
-    color: whitesmoke;
+    color: #010f1c;
     margin-top: 1em;
+    margin-left: 40%;
+    font-size: 30px;
 }
 
 .container {
@@ -90,7 +100,7 @@ margin-top: -2.5em;
 }
 
 .pointer{
-    background-color: white;
+    background-color:  #010f1c75;
     border-radius: 50%;
     height: 20px;
     width: 20px;
