--- a/src/Breathing.css
+++ b/src/Breathing.css
@@ -29,6 +29,7 @@
     color:  #010f1c;
     justify-content: center;
     margin-left: 40%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .quote{
@@ -38,6 +39,8 @@
     margin-top: 1em;
     margin-left: 40%;
     font-size: 30px;
+    font-family: 'Cedarville Cursive', cursive;
+    /* font-family: 'Homemade Apple', cursive; */
 }
 
 .container {
