--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anaheim&family=Barlow+Condensed:wght@200&family=Cedarville+Cursive&family=Gudea&family=Homemade+Apple&family=Montserrat:wght@100;200&family=News+Cycle&family=Oswald:wght@200&family=Pompiere&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
 
 body {
   margin: 0;
