--- a/src/App.css
+++ b/src/App.css
@@ -288,6 +288,24 @@ font-weight: 900;
   justify-content: flex-end;
 }
 
+.updateBtn{
+  background-color: rgba(48, 206, 145, 0.835);
+  border-style: none;
+  border-radius: 12pt;
+  height: 25px;
+  width: 60px;
+  margin-right:500px;
+}
+
+.deleteMoodBtn {
+  background-color: rgba(255, 99, 71, 0.767);
+  border-style: none;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  margin-right: 5px;
+}
+
 .articleTitle{
   color:white;
   font-weight: bolder;
@@ -631,6 +649,14 @@ font-weight: 900;
   font-size: 1.3rem;
 }
 
+.journalCard button{
+  background-color: rgba(255, 99, 71, 0.767);
+  border-style: none;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+}
+
 .entryResp{
   margin-top: -10px;
   font-size: 21px;
@@ -638,6 +664,7 @@ font-weight: 900;
 
 .journalDate{
   font-size: 16px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .profile{
@@ -656,6 +683,7 @@ font-weight: 900;
   color: white;
   font-size: 1.3rem;
   letter-spacing: 1px;
+  margin-bottom: 40px;
 }
 
 .textInfo{
@@ -685,12 +713,69 @@ font-weight: 900;
   font-size: 18px;
   letter-spacing: 1px;
   border-style: none;
-  margin: 20px;
+  margin-top: 45px;
 }
 
 .editProfileBtn:hover{
   background-color:#4ca493;
 }
+
+.stats{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 40px;
+}
+
+.mStats{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(5, 5, 5, 0.794);
+  color: white;
+}
+
+.mStats i{
+  font-size: 5rem;
+  margin-bottom: -10px;
+  margin-top: 20px;
+  color: rgba(255, 255, 255, 0.657);
+}
+.mStats p {
+  font-size: 45px;
+  margin-bottom: -5px;
+}
+
+.jStats{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 250px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(5, 5, 5, 0.794);
+  color: white;
+}
+
+.jStats p {
+  font-size: 45px;
+  margin-bottom: -5px;
+}
+
+.jStats i{
+  font-size: 5rem;
+  margin-bottom: -10px;
+  margin-top: 20px;
+  color: rgba(255, 255, 255, 0.657);
+}
+
+
 
 .loginForm{
   display: flex;
