--- a/src/App.css
+++ b/src/App.css
@@ -611,7 +611,7 @@ font-weight: 900;
 
 .moodName{
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   margin-top: 10px;
   letter-spacing: 1px;
 }
@@ -630,7 +630,7 @@ font-weight: 900;
 .moodTag{
   flex-basis: 20%;
   letter-spacing: 1px;
-  /* font-size: 18px; */
+  font-size: 18px;
 }
 
 .journalCard{
@@ -649,6 +649,57 @@ font-weight: 900;
   font-size: 1.3rem;
 }
 
+.historyQuoteDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.historyQuoteDiv h2 {
+  text-align: center;
+  font-weight: lighter;
+  color: #010f1c;
+  margin-top: -1em;
+  /* margin-left: 40%; */
+  font-size: 30px;
+  font-family: 'Cedarville Cursive', cursive;
+  letter-spacing: 1px;
+}
+
+.wellnessQuoteDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.wellnessQuoteDiv h2 {
+  text-align: center;
+  font-weight: lighter;
+  color: #010f1c;
+  margin-top: -1em;
+  margin-bottom: 2em;
+  line-height: 37px;
+  /* margin-left: 40%; */
+  font-size: 30px;
+  font-family: 'Cedarville Cursive', cursive;
+  letter-spacing: 1px;
+}
+
+.historyQuoteDiv h1 {
+  text-align: center;
+  font-weight: lighter;
+  color: #010f1c;
+  margin-top: -1em;
+  /* margin-left: 40%; */
+  font-size: 30px;
+  font-family: 'Cedarville Cursive', cursive;
+  letter-spacing: 1px;
+}
+
 .journalCard button{
   background-color: rgba(255, 99, 71, 0.767);
   border-style: none;
@@ -664,7 +715,8 @@ font-weight: 900;
 
 .journalDate{
   font-size: 16px;
-  color: rgba(255, 255, 255, 0.5);
+  letter-spacing: 1px;
+  /* color: rgba(255, 255, 255, 0.5); */
 }
 
 .profile{
